--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,16 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
 
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript" src="{{ url_for('static', filename='script.js') }}"></script>
+{% endblock %}
+
 {% block navbar %}
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		<form class="navbar-form navbar-center" method="POST" action="/">
-			{{ form.csrf_token }}
-			<div class="form-group">
-				{{ form.text(class_='form-control', placeholder='Job search...') }}
-			</div>
 			<button type="submit" class="btn btn-default">Submit</button>
 		</form>
     </div> <!-- navbar-collapse -->
@@ -26,6 +27,17 @@
 {% block content %}
 <div class="container">
 
+    <form method="POST" action="/">
+        <input type="button" class="btn btn-default" id="add-field" onclick="add_fields();" value="Add city" />
+        {{ form.csrf_token }}
+        <div class="form-group">
+            {{ form.search_text(class_='form-control', placeholder='Job search...') }}
+        </div>
+        <div class="form-group" id="city-form">
+
+        </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+    </form>
     <h1>{{ text }}</h1>
 
     <div id="cities">
