--- a/templates/index.html
+++ b/templates/index.html
@@ -27,16 +27,22 @@
 {% block content %}
 <div class="container">
 
-    <form method="POST" action="/">
-        <input type="button" class="btn btn-default" id="add-field" onclick="add_fields();" value="Add city" />
+    <form method="POST" action="/" class="form-horizontal">
         {{ form.csrf_token }}
+    <div class="form-group">
+        <button type="button" class="btn btn-default col-lg-2" id="add-field" onclick="addCity();">Add city</button>
+        <button type="button" class="btn btn-default col-lg-2" id="remove-all-field"
+            onclick="removeAllCities();">Remove all cities</button>
+        <button type="submit" class="btn btn-default col-lg-12">Submit</button>
+    </div>
         <div class="form-group">
+            <div class="col-lg-12">
             {{ form.search_text(class_='form-control', placeholder='Job search...') }}
+            </div>
         </div>
         <div class="form-group" id="city-form">
 
         </div>
-    <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <h1>{{ text }}</h1>
 
